# gateway/api/items.py
@@ -10,7 +10,7 @@ def search():
     rpc = settings.rpc
     connection = rpc.get_connection()
     try:
-        result = json.loads(connection.profile_service.get_profiles(1))
+        result = json.loads(connection.item_service.get_items())
     finally:
         rpc.release_connection(connection)
     return result
@@ -31,6 +31,34 @@ def create_category(data):
     connection = rpc.get_connection()
     try:
         result = json.loads(connection.item_service.create_category(data["name"]))
+    finally:
+        rpc.release_connection(connection)
+    if "error" in result:
+        return result, 400
+    return result
+
+@jwt_required
+def rent(data):
+    profile_id = get_jwt_identity()
+    item_id = data["item_id"]
+    rpc = settings.rpc
+    connection = rpc.get_connection()
+    try:
+        result = connection.rent_service.rent_item(profile_id, item_id)
+    finally:
+        rpc.release_connection(connection)
+    if "error" in result:
+        return result, 400
+    return result
+
+@jwt_required
+def returned(data):
+    profile_id = get_jwt_identity()
+    lend_id = data["lend_id"]
+    rpc = settings.rpc
+    connection = rpc.get_connection()
+    try:
+        result = connection.rent_service.return_item(profile_id, lend_id)
     finally:
         rpc.release_connection(connection)
     if "error" in result:
